fixed footer spacing at the very bottom

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -232,7 +232,7 @@ footer {
   background-color: rgba(118, 54, 148, 0.8);
   text-align: center;
   padding: 2rem 0;
-  margin: 2rem 0;
+  margin-top: 2rem;
   width: 100%;
 }
 .rosary-prayers,
